[workspace]
resolver = "2"

members = [
    "plugin",
    "client",
    "common",
    "examples/tester-client",
    "examples/tester-server",
]

[workspace.package]
version = "0.1.0"
authors = ["gmgalactus <gmgalactus@mango.markets>"]
repository = "https://github.com/blockworks-foundation/quic-geyser-plugin"
license = "AGPL"
edition = "2021"

[workspace.dependencies]
tokio = "1.37.0"
solana-sdk = "=1.17.31"
agave-geyser-plugin-interface = "=1.17.31"
solana-transaction-status = "=1.17.31"
solana-logger = "=1.17.31"

itertools = "0.10.5"
serde = "1.0.201"
clap = "=4.2.4"
serde_json = "1.0.96"
bincode = "=1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"
thiserror = "1.0.40"
futures = "0.3.28"
bytes = "1.4.0"
anyhow = "1.0.70"
log = "0.4.17"
const_env = "0.1.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.24"
native-tls = "0.2.11"
rustls = "=0.21.7"
rcgen = "0.10.0"
pkcs8 = "0.8.0"
lz4 = "1.24.0"
async-stream = "0.3.5"

mio = "0.8.11"
mio_channel = "0.1.3"
quiche = "0.21.0"
boring = "4.6.0"
ring = "0.17.8"

cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = "8.2.1"

quic-geyser-common = {path = "common", version="0.1.0"}
quic-geyser-client = {path = "client", version="0.1.0"}
quic-geyser-plugin = {path = "plugin", version="0.1.0"}

[profile.release]
debug = true
lto = true
codegen-units = 1