[workspace]
resolver = "2"

members = [
    "plugin",
    "client",
    "common",
    "server",
    "blocking_client",
    "examples/tester-client",
    "examples/tester-server",
    "proxy",
    "block-builder",
    "snapshot",
]

[workspace.package]
version = "0.1.5"
authors = ["gmgalactus <gmgalactus@mango.markets>"]
repository = "https://github.com/blockworks-foundation/quic-geyser-plugin"
license = "AGPL"
edition = "2021"

[workspace.dependencies]
solana-sdk = "~1.18.16"
solana-program = "~1.18.16"
solana-transaction-status = "~1.18.16"
solana-logger = "~1.18.16"
solana-rpc-client = "~1.18.16"
solana-rpc-client-api = "~1.18.16"
solana-account-decoder = "~1.18.16"
agave-geyser-plugin-interface = "=1.18.16"

itertools = "0.10.5"
serde = "1.0.201"
clap = "=4.2.4"
serde_json = "1.0.96"
bincode = "=1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"
thiserror = "1.0.40"
bytes = "1.4.0"
anyhow = "1.0.70"
log = "0.4.17"
const_env = "0.1.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.24"
rcgen = "0.10.0"
lz4 = "1.24.0"

mio = "0.8.11"
mio_channel = "0.1.3"

quiche = "=0.21.0"
boring = "4.6.0"
ring = "0.17.8"

cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = "8.2.1"
rand = "0.8.5"
tokio = "1.28.2"

quic-geyser-common = {path = "common", version="0.1.5"}
quic-geyser-client = {path = "client", version="0.1.5"}
quic-geyser-plugin = {path = "plugin", version="0.1.5"}
quic-geyser-server = {path = "server", version="0.1.5"}
quic-geyser-quiche-utils = {path = "quiche", version = "0.1.5"}
quic-geyser-blocking-client = {path = "blocking_client", version = "0.1.5"}
quic-geyser-block-builder = {path = "block-builder", version = "0.1.5"}
quic-geyser-snapshot = {path = "snapshot", version = "0.1.5"}

# solana lite account manager for snapshot creation
lite-account-manager-common = { git = "https://github.com/blockworks-foundation/solana-lite-account-manager.git", branch = "main" }
lite-account-storage = { git = "https://github.com/blockworks-foundation/solana-lite-account-manager.git", branch = "main" }
lite-token-account-storage = { git = "https://github.com/blockworks-foundation/solana-lite-account-manager.git", branch = "main" }

[profile.release]
debug = true
lto = true
codegen-units = 1

[patch.crates-io]
agave-geyser-plugin-interface = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }
solana-logger = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }
solana-program = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }
solana-sdk = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }
solana-transaction-status = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }
solana-rpc-client = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }
solana-rpc-client-api = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }
solana-account-decoder = { git = "https://github.com/blockworks-foundation/solana.git", branch = "v1.18.16_mango_rpc_optimizations" }