[package]
name = "quic-geyser-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

solana-sdk = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
mio = { workspace = true }
mio_channel = { workspace = true }

quic-geyser-common = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }