[package]
name = "quic-geyser-client"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

solana-sdk = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
quinn = "0.10.2"
rustls = "0.21.12"
rcgen = "0.10.0"
pkcs8 = "0.8.0"

quic-geyser-common = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
quic-geyser-server = { workspace = true }
mio = {workspace = true}
mio_channel = {workspace = true}