[package]
name = "quic-geyser-common"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

serde = { workspace = true }
bincode = { workspace = true }
lz4 = { workspace = true }
quiche = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = {workspace = true}
itertools = { workspace = true } 
ring = {workspace = true}

mio = { workspace = true }
mio_channel = { workspace = true }

native-tls = "0.2.11"

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }