[package]
name = "quic-geyser-common"
version = "0.1.6"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-transaction-status = { workspace = true }

serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = {workspace = true}
itertools = { workspace = true }
lz4 = { workspace = true }
bincode = { workspace = true }
circular-buffer = {workspace = true}

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }