[package]
name = "quic-geyser-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Godmode Galactus"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = "true" }
clap = { workspace = "true", features = ["derive"]  }
serde = { workspace = "true" }
solana-sdk = { workspace = "true" }
agave-geyser-plugin-interface = { workspace = "true" }
serde_json = { workspace = "true" }
anyhow = { workspace = "true" }
quinn = { workspace = "true" }
log = { workspace = "true" }
thiserror = {workspace = "true"}

quic-geyser-common = { path = "../common" }