[package]
name = "quic-geyser-plugin"
version = "0.1.4"
edition = "2021"
authors = ["Godmode Galactus"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"]  }
serde = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = { workspace = true }
agave-geyser-plugin-interface = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = {workspace = true}

quic-geyser-common = { workspace = true }
quic-geyser-server = { workspace = true }
quic-geyser-block-builder = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]