[package]
name = "quic-geyser-quiche-utils"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

solana-sdk = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

quic-geyser-common = { workspace = true }
bincode = { workspace = true }
ring = {workspace = true}
quiche = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

mio = { workspace = true }
nix = { version = "0.27", features = ["net", "socket", "uio"] }
libc = "0.2"

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
quic-geyser-server = { workspace = true }