[package]
name = "quic-geyser-snapshot"
version = "0.1.5"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-transaction-status = { workspace = true }

quic-geyser-common = {workspace = true}

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = {workspace = true}
itertools = { workspace = true }
lz4 = { workspace = true }
bincode = { workspace = true }
tokio = {workspace = true}

lite-account-manager-common = { workspace = true }
lite-account-storage = { workspace = true }
lite-token-account-storage = { workspace = true }
