[package]
name = "geyser-quic-plugin-tester"
version = "0.1.0"
edition = "2021"
authors = ["Godmode Galactus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-rpc-client = "~1.17.28"

tokio = { workspace = "true" }
clap = { workspace = "true", features = ["derive", "env"]  }
clap_derive = { workspace = "true" }
serde = { workspace = "true" }
solana-sdk = { workspace = "true" }
serde_json = { workspace = "true" }
anyhow = { workspace = "true" }
log = { workspace = "true" }
futures = { workspace = "true" }
bincode = { workspace = "true" }

quic-geyser-client = { path = "../client" }
quic-geyser-common = { path = "../common" }
quic-geyser-plugin = { path = "../plugin" }