[package]
name = "quic-plugin-tester-server"
version = "0.1.0"
edition = "2021"
authors = ["Godmode Galactus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { workspace = true, features = ["derive", "env"]  }
serde = { workspace = true }
solana-sdk = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
itertools = {workspace = true}
tracing-subscriber = { workspace = true }

rand = "0.8.5"

quic-geyser-client = { workspace = true }
quic-geyser-common = { workspace = true }
quic-geyser-plugin = { workspace = true }